src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	@font-face {
		font-family: 'Junicode';
		src: url(/fonts/Junicode/junicodetwobeta-condenseditalic-webfont.woff) format('woff');
		font-weight: 400;
	}

	@font-face {
		font-family: 'Lilex';
		src: url(/fonts/Lilex/variable/Lilex[wght].ttf) format('ttf');
	}

	@font-face {
		font-family: 'Lilex';
		src: url(/fonts/Lilex/variable/Lilex-Italic[wght].ttf) format('ttf');
		font-style: italic;
	}
}

* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
	@apply border-black;
	@apply dark:bg-black dark:text-white;
	@apply dark:border-white;
}

html,
body {
	max-width: 100vw;
	overflow-x: hidden;
	font-family: Lilex, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
}

a {
	color: inherit;
	text-decoration: none;
}

